--- a/css/main.css
+++ b/css/main.css
@@ -540,8 +540,7 @@ body.--locked {
 .contact {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: auto;
-  height: 100vh; }
+  min-height: 100vh; }
   @media (max-width: 600px) {
     .contact {
       height: auto;
